--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Cross-platform desktop proxy manager application",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "dev": "electron . --dev",
-    "build": "electron-builder",
-    "build:mac": "electron-builder --mac",
-    "build:win": "electron-builder --win",
-    "build:all": "electron-builder --mac --win"
+    "start": "npm run build:css && electron .",
+    "dev": "npm run build:css && electron . --dev",
+    "build:css": "npx tailwindcss -i ./index.css -o ./styles.css --watch",
+    "build:css:prod": "npx tailwindcss -i ./index.css -o ./styles.css --minify",
+    "build": "npm run build:css:prod && electron-builder",
+    "build:mac": "npm run build:css:prod && electron-builder --mac",
+    "build:win": "npm run build:css:prod && electron-builder --win",
+    "build:all": "npm run build:css:prod && electron-builder --mac --win"
   },
   "keywords": [
     "proxy",
@@ -20,17 +22,22 @@
   "author": "Zarachtech",
   "license": "MIT",
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
+    "autoprefixer": "^10.4.23",
+    "daisyui": "^5.5.14",
     "electron": "^28.0.0",
-    "electron-builder": "^24.9.1"
+    "electron-builder": "^24.9.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19"
   },
   "dependencies": {
-    "electron-store": "^8.1.0",
     "electron-log": "^5.0.1",
-    "proxy-agent": "^6.3.1",
-    "node-fetch": "^2.7.0",
+    "electron-store": "^8.1.0",
     "https-proxy-agent": "^7.0.2",
-    "socks-proxy-agent": "^8.0.2",
-    "keytar": "^7.9.0"
+    "keytar": "^7.9.0",
+    "node-fetch": "^2.7.0",
+    "proxy-agent": "^6.3.1",
+    "socks-proxy-agent": "^8.0.2"
   },
   "build": {
     "appId": "com.zayproxy.app",
@@ -39,16 +46,20 @@
     "directories": {
       "output": "dist"
     },
+    "asarUnpack": [
+      "node_modules/keytar/**/*"
+    ],
     "files": [
       "**/*",
-      "!node_modules/**/*",
-      "node_modules/electron-store/**/*",
-      "node_modules/electron-log/**/*",
-      "node_modules/proxy-agent/**/*",
-      "node_modules/node-fetch/**/*",
-      "node_modules/https-proxy-agent/**/*",
-      "node_modules/socks-proxy-agent/**/*",
-      "node_modules/keytar/**/*"
+      "!node_modules/**/{CHANGELOG.md,README.md,README,readme.md,readme,test,__tests__,tests,powered-test,example,examples}",
+      "!node_modules/**/*.md",
+      "!node_modules/**/*.ts",
+      "!node_modules/**/.{eslintrc,prettierrc}",
+      "!node_modules/**/.github",
+      "!node_modules/**/.nyc_output",
+      "!node_modules/**/coverage",
+      "!node_modules/electron/**/*",
+      "!node_modules/electron-builder/**/*"
     ],
     "mac": {
       "category": "public.app-category.utilities",
@@ -56,7 +67,10 @@
       "target": [
         {
           "target": "dmg",
-          "arch": ["x64", "arm64"]
+          "arch": [
+            "x64",
+            "arm64"
+          ]
         }
       ]
     },
@@ -65,7 +79,9 @@
       "target": [
         {
           "target": "nsis",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         }
       ],
       "requestedExecutionLevel": "requireAdministrator"
@@ -76,4 +92,3 @@
     }
   }
 }
-
