--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "daisyui": "^5.5.14",
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1",
+    "electron-icon-builder": "^2.0.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19"
   },
@@ -75,7 +76,7 @@
       ]
     },
     "win": {
-      "icon": "assets/icon.ico",
+      "icon": "assets/icon.png",
       "target": [
         {
           "target": "nsis",
